--- a/src/layaout/Layaout.astro
+++ b/src/layaout/Layaout.astro
@@ -1,9 +1,8 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '@/styles/global.css';
+import HeaderNavigation from '@/components/header-navigation/HeaderNavigation.astro';
 export const prerender = true;
 ---
 
@@ -13,10 +12,9 @@ export const prerender = true;
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <Header />
+    <HeaderNavigation />
     <main>
       <slot />
     </main>
-    <Footer />
   </body>
 </html>
