feat: Agregar constante de URL_BACKEND
Agrega la constante URL_BACKEND con el valor 'http://localhost:3000/' en el archivo consts.ts.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,9 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '@/styles/global.css';
 import Layaout from '@/layaout/Layaout.astro';
 export const prerender = true;
 ---
 
 <Layaout>
-  <main class="container mx-auto">
-
-    
-  </main>
+  <main class="container mx-auto"></main>
 </Layaout>
